--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,60 @@
 body{
 
+    margin: 0;
+    font-family: 'Arial', 'Helvetica Neue' Helvetica, sans-serif;
+    background-image: url(../images/round.png);
+
+}
+
+.container{
+
+    width: 960px;
+    margin: 0 auto;
+    padding-bottom: 0;
     
+}
+
+nav{
+
+    float: right;
+}
+
+header{
+
+    background: #ffffff;
+    border: 2px solid #cccccc;
+    
+}
+
+
+h1{
+
+    color: #ffffff;
+    padding: 10px;
+    margin-bottom: 0;
+    display: inline-block;
+    background: #4aaaa5;
+}
+
+nav ul{
+
+    overflow: hidden;
+    list-style: none;
+    padding: 35px;
+    margin: 0;
+    
+}
+
+nav li{
+    
+    display: inline-block;
+    margin-left: 20px;
+    
+}
+
+nav a{
+
+    color: #777777;
+    text-decoration: none;
+      
 }
