--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body{
 
     margin: 0;
-    font-family: 'Arial', 'Helvetica Neue' Helvetica, sans-serif;
     background-image: url(../images/round.png);
 
 }
@@ -22,7 +21,7 @@ nav{
 header{
 
     background: #ffffff;
-    border: 2px solid #cccccc;
+    border: 1px #cccccc;
     
 }
 
@@ -30,7 +29,8 @@ header{
 h1{
 
     color: #ffffff;
-    padding: 10px;
+    padding: 20px;
+    margin-top: 0;
     margin-bottom: 0;
     display: inline-block;
     background: #4aaaa5;
@@ -40,7 +40,7 @@ nav ul{
 
     overflow: hidden;
     list-style: none;
-    padding: 35px;
+    padding: 30px;
     margin: 0;
     
 }
@@ -58,3 +58,20 @@ nav a{
     text-decoration: none;
       
 }
+
+h2{
+
+    color: #4aaaa5;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+
+}
+
+.main{
+
+    background: #ffffff;
+    border: 1px solid #dddddd;
+    
+    
+
+}
+
