--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body{
 
     margin: 0;
     background-image: url(../images/round.png);
+    
 
 }
 
@@ -63,15 +64,32 @@ h2{
 
     color: #4aaaa5;
     font-family: 'Georgia', 'Times New Roman', Times, serif;
-
+    border-bottom: 2px solid #dddddd;
+    padding-bottom: 20px;
 }
 
 .main{
 
     background: #ffffff;
     border: 1px solid #dddddd;
+    margin: 0 auto;
+    padding: 20px;
     
-    
-
 }
 
+#image{
+
+    height: 150px;
+    width: 150px;
+    padding-top: 10px;
+    float: left;
+    border: 1px solid #dddddd;
+    margin-right: 20px;
+}
+
+p{
+    
+    float: both;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
