--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-
+    height: 100%;
     margin: 0;
     background-image: url(../images/round.png);
     
@@ -10,8 +10,20 @@ body{
 
     width: 960px;
     margin: 0 auto;
-    padding-bottom: 0;
     
+    
+}
+
+.page-content{
+
+    min-height: 100%;
+    margin-bottom: -30px;
+}
+
+.page-content::after{
+    content:"";
+    display: block;
+
 }
 
 nav{
@@ -20,9 +32,9 @@ nav{
 }
 
 header{
-
+    
     background: #ffffff;
-    border: 1px #cccccc;
+    border: 1px solid #cccccc;
     
 }
 
@@ -31,17 +43,17 @@ h1{
 
     color: #ffffff;
     padding: 20px;
-    margin-top: 0;
-    margin-bottom: 0;
     display: inline-block;
     background: #4aaaa5;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 nav ul{
 
-    overflow: hidden;
+   
     list-style: none;
-    padding: 30px;
+    padding-top: 30px;
     margin: 0;
     
 }
@@ -65,15 +77,20 @@ h2{
     color: #4aaaa5;
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     border-bottom: 2px solid #dddddd;
+    padding-left: 20px; 
     padding-bottom: 20px;
+
 }
 
 .main{
 
+    width: 960px;
     background: #ffffff;
     border: 1px solid #dddddd;
     margin: 0 auto;
-    padding: 20px;
+    margin-top: 30px;
+    
+    
     
 }
 
@@ -81,15 +98,26 @@ h2{
 
     height: 150px;
     width: 150px;
-    padding-top: 10px;
+    padding: 20px;
     float: left;
-    border: 1px solid #dddddd;
-    margin-right: 20px;
 }
 
 p{
-    
-    float: both;
+    padding: 20px;
+    line-height: 30px;
+    float: inline;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+
+footer, .page-content::after{
+    height: 30px;
+    
+}
+
+footer{ 
+
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+}
+
