--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,6 @@ body{
     
 }
 
-.page-content{
-
-    min-height: 100%;
-
-    margin-bottom: -30px;
-    
-}
-
 nav{
 
     float: right;
@@ -102,20 +94,24 @@ p{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-
-.page-content::after{
-    content:"";
-    display: block;
-}
-.footer, .push, .page-content::after{
-
-    height: 30px;
-}
     
 footer{
     
     background: #666666;    
     border-top: 8px solid #4aaaa5;
+}
+
+.form{
+
+    padding-left: 20px;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 30px;
+}
+
+input{
+
+    
 }
 
 
