--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 .container{
-
+    position: relative;
     width: 960px;
     margin: 0 auto;
     
@@ -15,7 +15,7 @@ body{
 }
 
 nav{
-
+    position: relative;
     float: right;
 }
 
@@ -28,7 +28,7 @@ header{
 
 
 h1{
-
+    text-align: center;
     color: #ffffff;
     padding: 20px;
     display: inline-block;
@@ -109,9 +109,10 @@ footer{
     line-height: 30px;
 }
 
-input{
+.port-content{
 
-    
+    margin: 20px;
+
 }
 
 
