--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,22 +36,24 @@ h1{
     margin-top: 0;
     margin-bottom: 0;
 }
-
-nav ul{
+ul:nth-child(){
     
+   border-right: 0;
+}
+.list{
     list-style: none;
     padding-top: 30px;
     margin: 0;
 }
 
-
-nav li{
+li{
+    border-right: 1px solid #777777;
     display: inline-block;
     margin-left: 20px;
     
 }
 
-nav a{
+a{
     
     color: #777777;
     text-decoration: none;
