--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,21 +36,26 @@ h1{
     margin-top: 0;
     margin-bottom: 0;
 }
-ul:nth-child(){
-    
-   border-right: 0;
-}
+
 .list{
     list-style: none;
-    padding-top: 30px;
-    margin: 0;
+    padding-top: 10px;
 }
 
 li{
-    border-right: 1px solid #777777;
+    
     display: inline-block;
     margin-left: 20px;
     
+}
+
+.border{
+    border-right: 1px solid #777777;
+    margin-left: 20px;
+}
+.no-border{
+
+    border-right: none;
 }
 
 a{
