--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+/*html,
 body{
-    height: 100%;
+    min-height: 100%;
+}*/
+body{
     margin: 0;
     background-image: url(../images/round.png);
     
-
 }
 
 .container{
@@ -39,7 +41,7 @@ h1{
 
 .list{
     list-style: none;
-    padding-top: 10px;
+    padding-top: 25px;
 }
 
 li{
@@ -49,13 +51,10 @@ li{
     
 }
 
-.border{
+.span{
     border-right: 1px solid #777777;
-    margin-left: 20px;
-}
-.no-border{
-
-    border-right: none;
+    display: inline;
+    margin-left: 15px;
 }
 
 a{
@@ -97,11 +96,15 @@ p{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+h4{
+    
+    text-align: center;
+}
     
 footer{
-    
     background: #666666;    
     border-top: 8px solid #4aaaa5;
+    
 }
 
 .form{
@@ -110,6 +113,10 @@ footer{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 30px;
+}
+.text-area{
+    height: 200px;
+    width: 900px;
 }
 
 .port-content{
