--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,9 +114,21 @@ footer{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 30px;
 }
+input{
+    width:900px;
+}
 .text-area{
-    height: 200px;
+    height: 100px;
     width: 900px;
+}
+button{
+    background-color: #4aaaa5;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #ffffff;
+    
 }
 
 .port-content{
