working on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,9 +132,35 @@ button{
 }
 
 .port-content{
+    
+    margin-left: 5px;
+    padding: 10px;
 
-    float: left;
 }
+.img1{
+    position: relative;
+    
+} 
+.img2{
+    left: 60px;
+
+    
+}
+.img3{
+    position: relative;
+    
+} 
+ 
+
+
+/*.port-content-3{
+    
+}
+/*img{
+    margin: 10px;
+}
+
+
 
 
 
