--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,34 +139,29 @@ button{
     margin-bottom: 10px;
     text-align: center;
     color: #ffffff;
-    
-}
-
-.content{
-    overflow: hidden;
-    margin: 0 auto;
-    width: 960px;
-    margin-left: 10px;
-    padding: 5px;
-
-}
-.port-content1{
-    width: 25%;
-    position: relative;
-    margin-left: 5px;
-    padding-bottom: 15px;
-    float: left;
 } 
-
-.port-content2{
+.content{
     position: relative;
-    width: 75%;
-    
+    width: 960px;
+    display: inline;
 }
-.content::after{
-    content: "";
-    height: 0;
-    clear: both;
+/*div,
+img{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+}
+.img-container{
+    width: 200px;
+    height: 200px;
+}
+.h3{
+
+    text-align: center;
+    color: #ffffff;
+    padding: 20px;
+    background: #4aaaa5;
+    display: inline-block;
 }
 
     
