--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ body{
     background-image: url(../images/round.png);
     
 }
+.clear::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 
 .container{
     position: relative;
@@ -22,6 +27,7 @@ body{
     
     
 }
+/* header, nav bar*/
 
 nav{
     position: relative;
@@ -70,6 +76,8 @@ a{
     color: #777777;
     text-decoration: none;
 }
+/* main content*/
+
 h2{
 
     color: #4aaaa5;
@@ -106,17 +114,8 @@ p{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-h4{
-    
-    text-align: center;
-}
-    
-footer{
-    width: 100%;
-    background: #666666;    
-    border-top: 8px solid #4aaaa5;
-    
-}
+
+/* form */
 
 .form{
 
@@ -139,29 +138,56 @@ button{
     margin-bottom: 10px;
     text-align: center;
     color: #ffffff;
-} 
-.content{
-    position: relative;
+}
+/* profile pics*/ 
+.main-1{
     width: 960px;
-    display: inline;
+    height: 920px;
+    background: #ffffff;
+    border: 1px solid #dddddd;
+    margin: 0 auto;
+    margin-top: 30px;
 }
-/*div,
-img{
-    position: absolute;
-    width: 200px;
-    height: 200px;
+.content{
+    text-align: center;
 }
-.img-container{
-    width: 200px;
-    height: 200px;
-}
-.h3{
+.img-1{
+    position: relative;
+    float: left;
+    padding: 40px;
 
+}
+.img-2{
+    position: relative;
+    float: left;
+    padding: 40px;
+    
+}
+.header-text{
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    position: relative;
     text-align: center;
     color: #ffffff;
-    padding: 20px;
     background: #4aaaa5;
-    display: inline-block;
+    bottom: 70PX;
+    padding: 10px;
+}
+
+
+/*footer*/
+
+h4{
+    
+    text-align: center;
+}
+    
+footer{
+    margin: 0 auto;
+    width: 100%;
+    background: #666666;    
+    border-top: 8px solid #4aaaa5;
+    float: fixed;
+    
 }
 
     
