--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,47 +2,49 @@
 body{
     min-height: 100%;
 }*/
-*{
+
+* {
     box-sizing: border-box;
 }
-html{
-    height: 100%;
+
+html {
+    position: relative;
+    min-height: 100%;
     margin: 0;
 }
-body{
+
+body {
     height: 100%;
-    margin: 0;
+    margin: 0 0 100px;
     background-image: url(../images/round.png);
-    
 }
+
 .clear::after {
     content: "";
     clear: both;
     display: table;
 }
 
-.container{
+.container {
     position: relative;
     margin: 0 auto;
-    
-    
 }
+
+
 /* header, nav bar*/
 
-nav{
+nav {
     position: relative;
     float: right;
     margin-right: 195px;
-    
 }
 
-header{
+header {
     background: #ffffff;
     border: 1px solid #cccccc;
 }
 
-
-h1{
+h1 {
     text-align: center;
     color: #ffffff;
     padding: 20px;
@@ -53,60 +55,54 @@ h1{
     margin-left: 195px;
 }
 
-.list{
+.list {
     list-style: none;
     padding-top: 25px;
 }
 
-li{
-    
+li {
     display: inline-block;
     margin-left: 20px;
-    
 }
 
-.span{
+.span {
     border-right: 1px solid #777777;
     display: inline;
     margin-left: 15px;
 }
 
-a{
-    
+a {
     color: #777777;
     text-decoration: none;
 }
+
+
 /* main content*/
 
-h2{
-
+h2 {
     color: #4aaaa5;
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     border-bottom: 2px solid #dddddd;
-    padding-left: 20px; 
+    padding-left: 20px;
     padding-bottom: 20px;
-
 }
 
-.main{
-    
+.main {
     width: 960px;
     background: #ffffff;
     border: 1px solid #dddddd;
     margin: 0 auto;
     margin-top: 30px;
-      
 }
 
-#image{
-
+#image {
     height: 150px;
     width: 150px;
     padding: 20px;
     float: left;
 }
 
-p{
+p {
     width: 960px;
     padding: 20px;
     line-height: 30px;
@@ -115,23 +111,26 @@ p{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+
 /* form */
 
-.form{
-
+.form {
     padding-left: 20px;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 30px;
 }
-input{
-    width:900px;
+
+input {
+    width: 900px;
 }
-.text-area{
+
+.text-area {
     height: 200px;
     width: 900px;
 }
-button{
+
+button {
     background-color: #4aaaa5;
     padding: 10px;
     margin-top: 10px;
@@ -139,61 +138,64 @@ button{
     text-align: center;
     color: #ffffff;
 }
-/* profile pics*/ 
-.main-1{
+
+
+/* profile pics*/
+
+.main-1 {
+    height: 700px;
     width: 960px;
-    height: 920px;
     background: #ffffff;
     border: 1px solid #dddddd;
     margin: 0 auto;
     margin-top: 30px;
 }
-.content{
+
+.content {
+    position: relative;
     text-align: center;
 }
-.img-1{
-    position: relative;
-    float: left;
-    padding: 40px;
 
-}
-.img-2{
+.img-1 {
     position: relative;
     float: left;
     padding: 40px;
-    
 }
-.header-text{
+
+.img-2 {
+    position: relative;
+    float: left;
+    padding: 40px;
+}
+
+.img-3 {
+    position: relative;
+    float: left;
+    padding: 40px;
+}
+
+.header-text {
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     position: relative;
     text-align: center;
     color: #ffffff;
     background: #4aaaa5;
     bottom: 70PX;
-    padding: 10px;
 }
 
 
 /*footer*/
 
-h4{
-    
+h4 {
     text-align: center;
 }
-    
-footer{
-    margin: 0 auto;
-    width: 100%;
-    background: #666666;    
-    border-top: 8px solid #4aaaa5;
+
+footer {
+    position: absolute;
     float: fixed;
-    
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
 }
-
-    
-
-
-
-
-
-
